--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5386,9 +5386,10 @@ header a {
   background: #fff;
   padding: 9px;
   border: 1px solid #babcbc;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+.content-area .box-shadow(0 0 5px, 30%) h2,
+.widget-area .box-shadow(0 0 5px, 30%) h2 {
+  font-family: 'Sail', cursive;
 }
 .box {
   color: #fe33ac;
