--- a/less/body.less
+++ b/less/body.less
@@ -18,6 +18,9 @@ header {
 	padding:9px;
 	border:1px solid #babcbc;
 	.box-shadow(0 0 5px, 30%)
+	h2 {
+		font-family: 'Sail', cursive;
+	}
 }
 
 @base: #f938ab;
