--- a/less/body.less
+++ b/less/body.less
@@ -22,6 +22,11 @@ header {
 		font-family: 'Sail', cursive;
 	}
 }
+.site-content {
+	h1 {
+		font-family: 'Sail', cursive;	
+	}
+}
 
 @base: #f938ab;
 
