Fixes for the form.

--- a/less/body.less
+++ b/less/body.less
@@ -43,3 +43,17 @@ header {
   border-color: lighten(@base, 30%);
   div { .box-shadow(0 5px 5px, 30%) }
 }
+
+.searchform {
+	label {
+		display: none;
+	}
+	.field {
+		width: 60%;
+	}
+	.submit {
+		.btn;
+		.btn-primary;
+		margin-top:-11px;
+	}
+}
